<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorMain"
    tools:context="com.apap.pom.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/sign_in_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            tools:text="Συνδεση με Google λογαριασμό" />

        <ImageView
            android:id="@+id/iV_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pom_128" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:visibility="gone"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:visibility="gone"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_revoke_access"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>