<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_review_path"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apap.pom.ReviewPathActivity"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_review_type"
            android:id="@+id/tv_review_path" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerReviewPath"
            android:entries="@array/review_type_arrays"
            android:prompt="@string/review_type_prompt" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_review_tag"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_review_tags_type"
            android:id="@+id/tv_review_tag" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerReviewTag"
            android:entries="@array/tags_review_type_arrays"
            android:prompt="@string/tags_review_type_prompt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_new_path"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_new_path_type"
            android:id="@+id/tv_new_path" />

        <Spinner
            android:id="@+id/spinnerNewPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/new_path_type_arrays"
            android:prompt="@string/new_path_type_prompt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_review_btn"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnReviewSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:onClick="submitReview"
            android:text="@string/submit_review" />

        <Button
            android:id="@+id/btnReviewDiscard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:onClick="discardReview"
            android:text="@string/discard_review" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_review_descr"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_show_info"
            android:background="@android:drawable/screen_background_light_transparent"
            android:src="@android:drawable/ic_menu_info_details" />

        <TextView
            android:id="@+id/tv_review_descr_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/select_path_for_review_1"
            android:textColor="@color/colorOrange"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            tools:textColor="#448aff" />

    </LinearLayout>

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/review_map"
        android:layout_weight="1"
        android:layout_margin="10dp"
        map:mapType="normal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.80"
            android:background="@android:drawable/screen_background_light_transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_line_1"
                android:id="@+id/tv_view_red"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:layout_alignParentTop="true" />
            <View
                android:layout_width="15dp"
                android:layout_height="3dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:id="@+id/view_line_red"
                android:layout_toRightOf="@id/tv_view_red"
                android:layout_toEndOf="@id/tv_view_red"
                android:background="@color/colorWalkPath"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_line_2"
                android:id="@+id/tv_view_green"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/view_line_red"
                android:layout_toEndOf="@id/view_line_red"
                android:background="@android:drawable/screen_background_light_transparent"
                android:layout_alignParentTop="true" />
            <View
                android:layout_width="15dp"
                android:layout_height="3dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:id="@+id/view_line_green"
                android:layout_toRightOf="@id/tv_view_green"
                android:layout_toEndOf="@id/tv_view_green"
                android:background="@color/colorSketchPath"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_line_3"
                android:id="@+id/tv_view_orange"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/view_line_green"
                android:layout_toEndOf="@id/view_line_green"
                android:background="@android:drawable/screen_background_light_transparent"
                android:layout_alignParentTop="true" />
            <View
                android:layout_width="15dp"
                android:layout_height="3dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:id="@+id/view_line_orange"
                android:layout_toRightOf="@id/tv_view_orange"
                android:layout_toEndOf="@id/tv_view_orange"
                android:background="@color/colorPendingPath"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_line_4"
                android:id="@+id/tv_view_blue"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/view_line_orange"
                android:layout_toEndOf="@id/view_line_orange"
                android:background="@android:drawable/screen_background_light_transparent"
                android:layout_alignParentTop="true" />
            <View
                android:layout_width="15dp"
                android:layout_height="3dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:id="@+id/view_line_blue"
                android:layout_toRightOf="@id/tv_view_blue"
                android:layout_toEndOf="@id/tv_view_blue"
                android:background="@color/colorDrawPath"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:alpha="0.95"
            android:background="@android:drawable/screen_background_light_transparent"
            android:src="@android:drawable/ic_menu_revert" />

        </fragment>

</LinearLayout>
