<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_rev_sug"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:background="@color/colorMain">

    <TextView
        android:id="@+id/tv_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="4dp"
        android:text="@string/info_title"
        android:textAllCaps="false"
        android:textColor="@color/colorDrawPath"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        tools:textColor="#448aff" />

    <TextView
        android:id="@+id/tv_info_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_info_title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/info_review_msg"
        android:textColor="@color/colorDrawPath"
        tools:textColor="#448aff"
        tools:textColorLink="#448aff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/tv_info_line"
        android:layout_below="@+id/tv_info_review"
        android:background="@color/colorDrawPath" />

    <TextView
        android:id="@+id/tv_info_suggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_info_line"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="8dp"
        android:text="@string/info_suggest_msg"
        android:textColor="@color/colorOrange"
        tools:textColor="#448aff" />

    <Button
        android:id="@+id/btn_close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_info_suggest"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/close_info_txt"
        android:textColor="@color/colorOrange"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        tools:textColor="#448aff" />


</RelativeLayout>