<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_google_games"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    tools:context="com.apap.pom.GoogleGamesActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- sign-in button -->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/games_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_button"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />

    <!-- sign-out button -->
    <Button
        android:id="@+id/games_sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout_button"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"  />

    <LinearLayout
        android:id="@+id/layout_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgBtnLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorMain"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/leaderboard" />

        <TextView
            android:id="@+id/tvLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/games_leaderboard"
            tools:text="Εμφάνιση Κατάταξης" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_achievements"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgBtnAchievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorMain"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/achievements" />

        <TextView
            android:id="@+id/tvAchievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/games_achievements"
            tools:text="Εμφάνιση Επιτευγμάτων" />

    </LinearLayout>

</LinearLayout>
